Creata struttura html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- contenitore generale  -->
+    <div class="container">
+        <!-- prima riga  -->
+        <div class="row">
+            <!-- colonne  -->
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <!-- /colonne  -->
+        </div>
+        <!-- /prima riga  -->
+        <!-- seconda riga  -->
+        <div class="row">
+            <!-- colonne  -->
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <!-- /colonne  -->
+        </div>
+        <!-- /seconda riga  -->
+    </div>
+    <!-- /contenitore generale  -->
 </body>
 </html>
