Inserite proprietà per il float delle colonne

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- contenitore generale  -->
     <div class="container">
         <!-- prima riga  -->
-        <div class="row">
+        <div class="row clearfix">
             <!-- colonne  -->
             <div class="col">
-
+                
             </div>
             <div class="col">
 
@@ -26,7 +26,7 @@
         </div>
         <!-- /prima riga  -->
         <!-- seconda riga  -->
-        <div class="row">
+        <div class="row clearfix">
             <!-- colonne  -->
             <div class="col">
 
