Completata prima immagine con dettagli

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
         <div class="row clearfix">
             <!-- colonne  -->
             <div class="col">
-                
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
+                <div class="product">
+                    <img src="img/1.webp" alt="Levi's Tshirt">
+                    <div class="product-heart">&hearts;</div>
+                    <div class="product-details">
+                        <div class="product-discount">-50%</div>
+                        <div class="product-green">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <span>Levi's</span>
+                    <h2>Relaxed fit tee unisex</h2>
+                    <span class="discounted-price">14,99 &euro;</span>
+                    <span class="real-price">29,99 &euro;</span>
+                </div>
             </div>
             <!-- /colonne  -->
         </div>
