Completate tutte le immagini

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,39 +15,120 @@
     <div class="container">
         <!-- prima riga  -->
         <div class="row clearfix">
-            <!-- colonne  -->
+            <!-- colonna  -->
             <div class="col">
                 <div class="product">
                     <img src="img/1.webp" alt="Levi's Tshirt">
                     <div class="product-heart">&hearts;</div>
-                    <div class="product-details">
+                    <div class="product-tag">
                         <div class="product-discount">-50%</div>
                         <div class="product-green">Sostenibilità</div>
                     </div>
                 </div>
                 <div class="product-info">
                     <span>Levi's</span>
-                    <h2>Relaxed fit tee unisex</h2>
-                    <span class="discounted-price">14,99 &euro;</span>
-                    <span class="real-price">29,99 &euro;</span>
+                    <h4>Relaxed fit tee unisex</h4>
+                    <p>
+                        <span class="actual-price">14,99 &euro;</span>
+                        <span class="real-price">29,99 &euro;</span>
+                    </p>
                 </div>
             </div>
-            <!-- /colonne  -->
+            <!-- /colonna  -->
+            <!-- colonna  -->
+            <div class="col">
+                <div class="product">
+                    <img src="img/2.webp" alt="Levi's Tshirt">
+                    <div class="product-heart">&hearts;</div>
+                    <div class="product-tag">
+                        <div class="product-discount">-30%</div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <span>Guess</span>
+                    <h4>roses tee</h4>
+                    <p>
+                        <span class="actual-price">20,99 &euro;</span>
+                        <span class="real-price">29,99 &euro;</span>
+                    </p>
+                </div>
+            </div>
+            <!-- /colonna  -->
+            <!-- colonna  -->
+            <div class="col">
+                <div class="product">
+                    <img src="img/3.webp" alt="Levi's Tshirt">
+                    <div class="product-heart">&hearts;</div>
+                    <div class="product-tag">
+                        <div class="product-discount">-30%</div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <span>Come zucchero filato</span>
+                    <h4>Voglia di colori pastello</h4>
+                    <p>
+                        <span class="actual-price">129,99 &euro;</span>
+                    </p>
+                </div>
+            </div>
+            <!-- /colonna  -->
         </div>
         <!-- /prima riga  -->
         <!-- seconda riga  -->
         <div class="row clearfix">
-            <!-- colonne  -->
+            <!-- colonna  -->
             <div class="col">
-
+                <div class="product">
+                    <img src="img/4.webp" alt="Levi's Tshirt">
+                    <div class="product-heart">&hearts;</div>
+                    <div class="product-tag">
+                        <div class="product-discount">-50%</div>
+                        <div class="product-green">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <span>Levi's</span>
+                    <h4>tee unisex</h4>
+                    <p>
+                        <span class="actual-price">14,99 &euro;</span>
+                        <span class="real-price">29,99 &euro;</span>
+                    </p>
+                </div>
             </div>
+            <!-- /colonna  -->
             <div class="col">
-
+                <div class="product">
+                    <img src="img/5.webp" alt="Stripe Bodice">
+                    <div class="product-heart">&hearts;</div>
+                    <div class="product-tag">
+                    </div>
+                </div>
+                <div class="product-info">
+                    <span>Maya Deluxe</span>
+                    <h4>Stripe bodice</h4>
+                    <p>
+                        <span class="actual-price">99,99 &euro;</span>
+                    </p>  
+                </div>
             </div>
+            <!-- /colonna  -->
             <div class="col">
-
+                <div class="product">
+                    <img src="img/6.webp" alt="Maglione nero">
+                    <div class="product-heart">&hearts;</div>
+                    <div class="product-tag">
+                        <div class="product-green">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="product-info">
+                    <span>Esprit</span>
+                    <h4>maglione - black</h4>
+                    <p>
+                        <span class="actual-price">29,99 &euro;</span>
+                    </p>
+                </div>
             </div>
-            <!-- /colonne  -->
+            <!-- /colonna  -->
         </div>
         <!-- /seconda riga  -->
     </div>
