Completato hover delle immagini

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <!-- colonna  -->
             <div class="col">
                 <div class="product">
-                    <img src="img/1.webp" alt="Levi's Tshirt">
+                    <img class="first-img" src="img/1.webp" alt="Levi's Tshirt">
+                    <img class="second-img" src="img/1b.webp" alt="Levi's Tshirt">
                     <div class="product-heart">&hearts;</div>
                     <div class="product-tag">
                         <div class="product-discount">-50%</div>
@@ -38,7 +39,8 @@
             <!-- colonna  -->
             <div class="col">
                 <div class="product">
-                    <img src="img/2.webp" alt="Levi's Tshirt">
+                    <img class="first-img" src="img/2.webp" alt="Roses Tee">
+                    <img class="second-img" src="img/2b.webp" alt="Roses Tee">
                     <div class="product-heart">&hearts;</div>
                     <div class="product-tag">
                         <div class="product-discount">-30%</div>
@@ -57,7 +59,8 @@
             <!-- colonna  -->
             <div class="col">
                 <div class="product">
-                    <img src="img/3.webp" alt="Levi's Tshirt">
+                    <img class="first-img" src="img/3.webp" alt="Colori pastello">
+                    <img class="second-img" src="img/3b.webp" alt="Colori pastello">
                     <div class="product-heart">&hearts;</div>
                     <div class="product-tag">
                         <div class="product-discount">-30%</div>
@@ -79,7 +82,8 @@
             <!-- colonna  -->
             <div class="col">
                 <div class="product">
-                    <img src="img/4.webp" alt="Levi's Tshirt">
+                    <img class="first-img" src="img/4.webp" alt="Levi's Tshirt">
+                    <img class="second-img" src="img/4b.webp" alt="Levi's Tshirt">
                     <div class="product-heart">&hearts;</div>
                     <div class="product-tag">
                         <div class="product-discount">-50%</div>
@@ -98,7 +102,8 @@
             <!-- /colonna  -->
             <div class="col">
                 <div class="product">
-                    <img src="img/5.webp" alt="Stripe Bodice">
+                    <img class="first-img" src="img/5.webp" alt="Stripe Bodice">
+                    <img class="second-img" src="img/5b.webp" alt="Stripe Bodice">
                     <div class="product-heart">&hearts;</div>
                     <div class="product-tag">
                     </div>
@@ -114,7 +119,8 @@
             <!-- /colonna  -->
             <div class="col">
                 <div class="product">
-                    <img src="img/6.webp" alt="Maglione nero">
+                    <img class="first-img" src="img/6.webp" alt="Maglione nero">
+                    <img class="second-img" src="img/6b.webp" alt="Maglione Nero">
                     <div class="product-heart">&hearts;</div>
                     <div class="product-tag">
                         <div class="product-green">Sostenibilità</div>
